Closed
Bug 1683652
Opened 5 years ago
Closed 5 years ago
Weird rendering when changing r property value
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
86 Branch
Tracking | Status | |
---|---|---|
firefox86 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(2 files)
STR:
- Move the slider, see how rendering breaks.
- Inspect the
<circle>
elements, uncheck and check ther
property again, see how it's fixed.
Assignee | ||
Updated•5 years ago
|
Attachment #9194200 -
Attachment mime type: text/plain → text/html
Comment 1•5 years ago
|
||
Not sure I'm seeing whatever it is you're seeing.
Assignee | ||
Comment 2•5 years ago
|
||
The issue here is caused (a bit surprisingly) by the counter-reset
declaration.
The underlying issue is that counter-reset causes us to rebuild the
frame tree for the whole <body>
, in order to rebuild the counter tree.
That makes the geometry frame not get its updated style (because the
frame goes away), and the next frame getting constructed getting a null
aOldComputedStyle (as expected, as it's a new frame).
We can't rely on the cached path not to change while there's no frame,
so clear it out when there's no old style.
The test is a simpler version of the test-case, where instead of
counter-reset
, I use display: none
to trigger the bogus codepath.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c38b504a9429
Clear cached path when reframed. r=longsonr
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/26971 for changes under testing/web-platform/tests
Comment 5•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in
before you can comment on or make changes to this bug.
Description
•