Bug 1683652 - Clear cached path when reframed. r=longsonr

The issue here is caused (a bit surprisingly) by the counter-reset
declaration.

The underlying issue is that counter-reset causes us to rebuild the
frame tree for the whole `<body>`, in order to rebuild the counter tree.

That makes the geometry frame not get its updated style (because the
frame goes away), and the next frame getting constructed getting a null
aOldComputedStyle (as expected, as it's a new frame).

We can't rely on the cached path not to change while there's no frame,
so clear it out when there's no old style.

The test is a simpler version of the test-case, where instead of
`counter-reset`, I use `display: none` to trigger the bogus codepath.

Differential Revision: https://phabricator.services.mozilla.com/D100237